# api/controllers/webteach_service.js
@@ -14,7 +14,11 @@ module.exports = {
     userLogin: userLogin,
     userSignup: userSignup,
     getAllBlogs: getAllBlogs,
-    getUserBlogs: getUserBlogs
+    getUserBlogs: getUserBlogs,
+    saveBlogData: saveBlogData,
+    updateBlogData: updateBlogData,
+    getBlogData: getBlogData,
+    deleteBlogData: deleteBlogData
 };
 
 
@@ -64,6 +68,66 @@ function getAllBlogs(req, res) {
 function getUserBlogs(req, res) {
     var username = req.swagger.params.username.value;
     (new WebTeach()).getUserBlogs(username,
+        function(err, content) {
+            if (err) {
+                res.writeHead(err.statusCode, { 'Content-Type': 'application/json' });
+                res.end(JSON.stringify(err));
+                log.error("TraceId : %s, Error : %s", JSON.stringify(err));
+            } else if (content) {
+                res.set('Content-Type', 'application/json');
+                res.json(content);
+            }
+        });
+}
+
+function saveBlogData(req, res) {
+    // var username = req.swagger.params.blo.value;
+    (new WebTeach(req.swagger.params.body.value)).saveBlogData(
+        function(err, content) {
+            if (err) {
+                res.writeHead(err.statusCode, { 'Content-Type': 'application/json' });
+                res.end(JSON.stringify(err));
+                log.error("TraceId : %s, Error : %s", JSON.stringify(err));
+            } else if (content) {
+                res.set('Content-Type', 'application/json');
+                res.json(content);
+            }
+        });
+}
+
+function getBlogData(req, res) {
+    var id = req.swagger.params.blogId.value;
+    (new WebTeach()).getBlogData(id,
+        function(err, content) {
+            if (err) {
+                res.writeHead(err.statusCode, { 'Content-Type': 'application/json' });
+                res.end(JSON.stringify(err));
+                log.error("TraceId : %s, Error : %s", JSON.stringify(err));
+            } else if (content) {
+                res.set('Content-Type', 'application/json');
+                res.json(content);
+            }
+        });
+}
+
+function updateBlogData(req, res) {
+    var id = req.swagger.params.blogId.value;
+    (new WebTeach(req.swagger.params.body.value)).updateBlogData(id,
+        function(err, content) {
+            if (err) {
+                res.writeHead(err.statusCode, { 'Content-Type': 'application/json' });
+                res.end(JSON.stringify(err));
+                log.error("TraceId : %s, Error : %s", JSON.stringify(err));
+            } else if (content) {
+                res.set('Content-Type', 'application/json');
+                res.json(content);
+            }
+        });
+}
+
+function deleteBlogData(req, res) {
+    var id = req.swagger.params.blogId.value;
+    (new WebTeach()).deleteBlogData(id,
         function(err, content) {
             if (err) {
                 res.writeHead(err.statusCode, { 'Content-Type': 'application/json' });
